syntax = "proto3";
package Rdp;

option csharp_namespace = "RdpBridge.Protocol";

// import "google/protobuf/timestamp.proto";

message RdpMessage {
    oneof message {
        RdpDisconnectMessage disconnect = 1;
        RdpVerifyCertificateMessage verifyCertificate = 2;
        RdpVerifyCertificateResultMessage verifyCertificateResult = 3;
        RdpAuthenticateMessage authenticate = 4;
        RdpAuthenticateResultMessage authenticateResult = 5;
        RdpSessionEndMessage sessionEnd = 6;
    }
}

message RdpDisconnectMessage { }

message RdpAuthenticateMessage {
    string username = 1;
    string password = 2;
    string domain = 3;
}

message RdpAuthenticateResultMessage {
    string username = 1;
    string password = 2;
    string domain = 3;
    bool passwordEntered = 4;
}

message RdpVerifyCertificateMessage {
    bytes x509CertBytes = 1;
    string hostname = 2;
    uint32 port = 3;
    uint32 flags = 4;
}

message RdpVerifyCertificateResultMessage {
    RdpVerifyCertificateResult result = 1;

    enum RdpVerifyCertificateResult {
        NotTrusted = 0;
        PermenantlyTrusted = 1;
        TemporarilyTrusted = 2;
    }
}

message RdpSessionEndMessage {}
